<resources>
    <string name="app_name">Espectacle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="interprete">Intérprete</string>
    <string name="album">Álbum</string>
    <string name="cancion">Canción</string>
    <string name="musica">Música</string>
    <string name="imagenes">Imágenes</string>
    <string name="video">Vídeo</string>
    <string name="v360">360º</string>
    <string name="fecha">Fecha</string>
    <string name="tamano">Tamaño</string>
    <string name="definicion">Definición</string>
    <string name="duracion">Duración</string>
    <string name="calidad">Calidad</string>
    <string name="nombre">Nombre</string>
    <string name="no_hay_elementos">No hay elementos que mostrar</string>
    <string name="VRButton">VR</string>
    <string name="filtro1">Filtro1</string>
    <string name="filtro2">Filtro2</string>
    <string name="filtro3">Filtro3</string>
    <string name="imgDesc">Imagen contenida en el dispositivo</string>
    <string name="play_button">Reproducir</string>
    <string name="shuffle_button">reproduccion aleatorea</string>
    <string name="next_button">siguiente</string>
    <string name="back_button">anterior</string>
    <string name="item_image">imagen del item de la lista</string>
    <string name="logo">logo de la aplicacion</string>
    <string name="albumart">album art</string>
    <string name="cdStatusBarIcon">status bar icon</string>
    <string name="cdPrevSongButton">Previus song</string>
    <string name="cdPlaySongButton">Play or Pause</string>
    <string name="cdNextSongButton">Next song</string>
    <string name="cdAlbumArt">Album art</string>
    <string name="cdPrevSong">Previus song</string>
    <string name="cdPlaySong">Play</string>
    <string name="cdNextSong">Next song</string>
    <string name="cdAlbumArtExpanded">Album art</string>
    <string name="cdCloseExpanded">Close</string>
</resources>
