<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.uva.inf.espectacle.fragments.BaseListFragment"
    android:id="@+id/mediaList">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="50dp"
            android:elevation="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/filtro1"
                android:textColor="@color/backgroundLight"
                android:id="@+id/filtro1"
                android:layout_weight="1"
                android:background="@drawable/background_selector"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/filtro2"
                android:textColor="@color/backgroundLight"
                android:id="@+id/filtro2"
                android:layout_weight="1"
                android:background="@drawable/background_selector"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/filtro3"
                android:textColor="@color/backgroundLight"
                android:id="@+id/filtro3"
                android:layout_weight="1"
                android:background="@drawable/background_selector"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView android:id="@+id/emptyList" android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center" />

</FrameLayout>
